# mail-autodiscover

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.ghcr.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  release.yml
app/: __init__.py  config.py  email_utils.py  landing.py  main.py  mobileconfig.py  security.py  templates.py
config/: config.example.yaml
docs/: dns.md  troubleshooting.md
docs/clients/: apple-mail.md  outlook.md  thunderbird.md
docs/reverse-proxy/: caddy.md  cloudflare-tunnel.md  nginx-proxy-manager.md  nginx.md  synology-reverse-proxy.md
scripts/: check.sh  format_release_notes.py
tests/: conftest.py  test_compose_files.py  test_config.py  test_domain_config.py  test_edge_cases.py  test_email_validation.py  test_landing.py  test_mobileconfig.py  test_outlook.py  test_production_validation.py  test_proxy_headers.py  test_release_notes.py  test_security.py  test_security_parsing.py  test_templates.py  test_thunderbird.py
wiki/: Client-Setup-Outlook-Thunderbird-Apple-Mail.md  Configuration-Reference.md  Deployment-with-Docker-or-Portainer.md  Home.md  Quick-Start.md  Reverse-Proxy-and-DNS.md  Security-Model.md  Troubleshooting.md  Upgrade-Guide.md  What-This-Project-Does.md  _Sidebar.md
