[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mail-autodiscover"
version = "0.1.0"
description = "Lightweight Outlook Autodiscover and Thunderbird Autoconfig service for self-hosted mail servers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "defusedxml>=0.7.1",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]
