[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mail-autodiscover"
version = "0.2.0"
description = "Lightweight Outlook Autodiscover and Thunderbird Autoconfig service for self-hosted mail servers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "defusedxml>=0.7.1",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.8.0",
    "deptry>=0.23.0",
    "httpx>=0.28.0",
    "mypy>=1.13.0",
    "pip-audit>=2.7.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.wheel.force-include]
"app/static" = "app/static"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=90"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]

[tool.deptry]
ignore = ["DEP003"]

[tool.deptry.per_rule_ignores]
DEP002 = [
    "uvicorn",
    "bandit",
    "deptry",
    "httpx",
    "mypy",
    "pip-audit",
    "pytest",
    "pytest-cov",
    "ruff",
]
